<resources>
    <string name="app_name">Random Treasure</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="swipe_left">Swipe ← for History</string>
    <string name="swipe_right">swipe right for buttons</string>
    <string name="defaultTreasure">Treasure</string>

    <string name="spice">Spice</string>
    <string name="fiber">Fiber/Fabric</string>
    <string name="otherMaterial">Other Material</string>
    <string name="jewel">Jewel</string>
</resources>